<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="MOBILEHOIST" Id="{6feb0a57-1780-4932-b812-9f553e9b8e4f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
(*DECLARATION OF INPUTS AND OUTPUTS CORRESPONDING TO MOBILE HOIST.*)


(*INPUTS*)

(*DECLARATION OF RESET SWITCH - INPUT 1 EL1859-1 PIN 1*)
SYSTEM_RESET			:BOOL;

(*DECLARATION OF E-STOP CONDITION PER SAFETY RELAY - INPUT 2 EL1859-1 PIN 2*)
ESTOP_CONDITION			:BOOL;

(*DECLARATION OF FLOOR POSITION ENABLE SWITCH 1 - INPUT 3 EL1859-1 PIN 3*)
FLOORPOSITION_SWITCH1	:BOOL;

(*DECLARATION OF FLOOR POSITION ENABLE SWITCH 2 - INPUT 4 EL1859-1 PIN 4*)
FLOORPOSITION_SWITCH2	:BOOL;

(*DECLARATION OF THERMOSTAT TEMPERATURE SWITCH - INPUT 5 EL1859-1 PIN 5*)
(*THERMOSTAT SET TO DEFAULT 60 DEGREES C*)
TEMP_SWITCH				:BOOL;

(*DECLARATION OF PENDANT DEADMAN SWITCH - INPUT 6 EL1859-1 PIN 6*)
DEADMAN_SWITCH			:BOOL;


(*OUTPUTS*)

(*DECLARATION OF SAFETY RELAY RESET SIGNAL(AMBER) - OUTPUT 1 EL1859-1 PIN 9*)
RESETPB_LED				:BOOL;

(*DECLARATION OF POWER INDICATOR(GREEN) - OUTPUT 2 EL1859-1 PIN 10*)
SELECTORSW_LED			:BOOL;

(*DECLARATION OF MAGNETIC BRAKE 1 - OUTPUT 4 EL1859-1 PIN 11*)
MAGNETIC_BRAKE1			:BOOL;

(*DECLARATION OF MAGNETIC BRAKE 2 - OUTPUT 5 EL1859-1 PIN 12*)
MAGNETIC_BRAKE2			:BOOL;

(*DECLARATION OF INVERTER DC POWER CONTACTOR - OUTPUT 6 EL1859-1 PIN 13*)
MAINPWR					:BOOL;

(*DECLARATION OF SPOTLIGHT - OUTPUT 6 EL1859-7 PIN 14*)
SPOTLIGHT					:BOOL;

(*DECLARATION OF STACK LIGHT RED - EL1859-2 OUTPUT 1 PIN 9*)
REDSTACKLIGHT			:BOOL;

(*DECLARATION OF STACK LIGHT AMBER - EL1859-2 OUTPUT 2 PIN 10*)
AMBERSTACKLIGHT			:BOOL;


(*STATE*)

(*DECLARATION OF IO STATE*)
IOSTATE1				:BOOL;
IOSTATE2				:BOOL;

(*DECLARATION OF IO STATE ERROR*)
IOERROR					:BOOL;

(*DECLARATION OF MAIN STATE*)
MAINSTATE				:INT;


(*DECLATATION OF LOADED STATUS*)
LOWERED_PROPERLY		:BOOL;
LOWERED_IMPROPERLY		:BOOL;
RAISED_PROPERLY			:BOOL;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>