<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="IO" Id="{c5b9e636-c88d-49e4-9b5d-fe919b6a53df}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM IO
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
 NAME:		16435-MOBILEHOIST
 CREATED:	10/30/2022 
 AUTHOR:	RRODRIGUEZ-HERNANDEZ
 FIRST PROTOTYPE
*)

(*INPUTS - CX8190-EL1859-1*)
MOBILEHOIST.SYSTEM_RESET					:=INPUT.EL1859_1.0;						//INPUT 1
MOBILEHOIST.ESTOP_CONDITION					:=INPUT.EL1859_1.1 = FALSE;				//INPUT 2
MOBILEHOIST.FLOORPOSITION_SWITCH1			:=INPUT.EL1859_1.2;						//INPUT 3
MOBILEHOIST.FLOORPOSITION_SWITCH2			:=INPUT.EL1859_1.3;						//INPUT 4
MOBILEHOIST.TEMP_SWITCH						:=INPUT.EL1859_1.4;						//INPUT 5
MOBILEHOIST.DEADMAN_SWITCH					:=INPUT.EL1859_1.5;						//INPUT 6

(*OUTPUTS - CX8190-EL1859-1*)
OUTPUT.EL1859_1.0 							:=MOBILEHOIST.RESETPB_LED;				//OUTPUT 1			
OUTPUT.EL1859_1.1                           :=MOBILEHOIST.SELECTORSW_LED;			//OUTPUT 2									
OUTPUT.EL1859_1.2                           :=MOBILEHOIST.MAGNETIC_BRAKE1;			//OUTPUT 3
OUTPUT.EL1859_1.3 							:=MOBILEHOIST.MAGNETIC_BRAKE2;			//OUTPUT 4			
OUTPUT.EL1859_1.4                           :=MOBILEHOIST.MAINPWR;					//OUTPUT 5
OUTPUT.EL1859_1.4                           :=MOBILEHOIST.SPOTLIGHT;				//OUTPUT 6

(*OUTPUTS - CX8190-EL1859-2*)
OUTPUT.EL1859_2.0 							:=MOBILEHOIST.REDSTACKLIGHT;			//OUTPUT 1			
OUTPUT.EL1859_2.1                           :=MOBILEHOIST.AMBERSTACKLIGHT;			//OUTPUT 2		

(*STATE*)
MOBILEHOIST.IOSTATE1						:=INPUT.EL1859_1_STATE.3;
MOBILEHOIST.IOSTATE2						:=INPUT.EL1859_2_STATE.3;




]]></ST>
    </Implementation>
    <LineIds Name="IO">
      <LineId Id="52" Count="3" />
      <LineId Id="59" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="15" Count="2" />
      <LineId Id="42" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="36" Count="2" />
      <LineId Id="35" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="20" Count="1" />
      <LineId Id="23" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>